# nlp

./: README.md  pyproject.toml
DESAFIO_1/: Desafio_1.ipynb
DESAFIO_2/: labels.tsv
DESAFIO_3/: Desafio_3_lenguaje_char.ipynb  Desafio_3_lenguaje_word.ipynb  model_gru.keras  model_lstm.keras  model_simpleRNN.keras
DESAFIO_4/: 6_bot_qa.ipynb
DESAFIO_5/: DESAFIO_5.ipynb
