[tool.poetry]
name = "nlp"
version = "0.1.0"
description = "Procesamiento del Lenguaje Natural (NLP)"
authors = ["Diego <sarinadiego@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.1.0"
scikit-learn = "^1.5.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
