[tool.poetry]
name = "nlp"
version = "0.1.0"
description = "Procesamiento del Lenguaje Natural (NLP)"
authors = ["Diego <sarinadiego@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.21.0"
scikit-learn = "^1.5.1"
pandas = "^2.2.2"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
gensim = "^4.3.3"
keras-preprocessing = "^1.1.2"
nltk = "^3.9.1"
plotly = "^5.24.0"
nbformat = "^5.10.4"
gradio = "^4.44.0"
tensorflow-metal = "^1.1.0"
tensorflow-macos = "^2.16.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
